# StringClass

./: .gitignore  CMakeLists.txt  ExampleRun.bat  README.md
src/: CMakeLists.txt  String.cpp  String.h  mString.cpp  mString.h  main.cpp  utils.h
test/: CMakeLists.txt  StringTest.cpp  testRunner.cpp
